# fastapi-identity

./: .dockerignore  .env.example  .gitignore  .gitlint  Dockerfile  Makefile  README.md  config.mk  docker-compose.yml  pyproject.toml  startup
.hooks/: commit-msg  pre-commit  pre-push
app/: initial_data.py  main.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/core/: config.py  permissions.py  security.py
app/core/bigquery/: __init__.py  bigquery.py  bigquery_adapter.py  patterns.py  queries.py
app/core/crud/: base.py
app/db/: base.py  events.py  init_db.py  session.py
app/place/models/: place.py
app/place/queries/: __init__.py
app/place/queries/sql/: places.sql
app/place/routers/: place.py
app/place/views/: __init__.py  place.py
app/user/cruds/: user.py
app/user/models/: token.py  user.py
app/user/routers/: auth.py  user.py
migrations/: env.py
migrations/versions/: a072302718e1_add_user_model_fields_is_validated.py  d04204b43478_init.py
